# ai-dev-tools

./: .gitignore  README.md  TicTacToeApp.py  qq.ipynb  render.yaml  tic_tac_toe.py
aidevtools_project1/: .gcloudignore  CLOUD_RUN_SETUP.md  README.md  db.ipynb  db_list.py  deploy_cloud_run.sh  load_data.py  load_to_duckdb.py  project_vision.md  pyproject.toml  pytest.ini  test_backend_connection.py  youtube_api.py  youtube_data.duckdb  youtube_mcp.py
aidevtools_project1/.agent/rules/: code-generation-guide.md  code-style-guide.md
aidevtools_project1/.agent/workflows/: generate-unit-tests.md
aidevtools_project1/__marimo__/session/: explore_data.py.json
aidevtools_project1/backend/: .dockerignore  .gcloudignore  Dockerfile  README.md  api.py  cookies.txt  database.py  db_list.py  demo_youtube_mcp.py  llm_utils.py  main.py  migrate_db.py  openapi.json  pyproject.toml  test_proxy.py  test_proxy_standalone.py  test_proxy_youtube.py  youtube_api.py  youtube_mcp.py
aidevtools_project1/backend/tests/: test_api.py  test_database.py  test_llm_integration.py  (+4 more)
aidevtools_project1/docs/: erd.mmd  flow.mmd  program_flow.md  project_vision.md  workflow.mmd
aidevtools_project1/frontend/: main.py  pyproject.toml  test_tabs.py
aidevtools_project1/frontend_flet/: README.md  main.py  pyproject.toml
aidevtools_project1/frontend_gradio/: Dockerfile  main.py  pyproject.toml  pyproject.toml.bak2  youtube_api.py
aidevtools_project1/frontend_nicegui/: .dockerignore  .gcloudignore  Dockerfile  README.md  api_client.py  main.py  pyproject.toml  repro_path.py  youtube_api.py
(+42 files in other folders)
